# rusty-cluster

./: .gitignore  Cargo.toml  Makefile  README.md
master/: Cargo.toml
master/src/: main.rs
rcluster/: Cargo.toml  build.rs
rcluster/src/: buffered.rs  connection.rs  errors.rs  lib.rs  master.rs  path_sync.rs  slave.rs  utils.rs
slave/: Cargo.toml
slave/src/: main.rs
src/: lib.rs  master.rs  slave.rs  utils.rs
tests/: cluster.rs
tests/test_path/: foobar
