[package]
name = "rcluster"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
build = "build.rs"

[dependencies]
chrono = "0.4"
derive-error = "0.0"
enum_primitive = "0.1"
env_logger = "0.4"
futures = "0.1"
lazy_static = "1.0"
log = "0.3"
num = "0.1"
rand = "0.4"
rustls = "0.12"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-rustls = "0.5"
walkdir = "0.2"
webpki = "0.18.0-alpha"

[build-dependencies]
