[package]
name = "rcluster"
version = "0.1.0"
authors = ["Ravi Shankar <wafflespeanut@gmail.com>"]
build = "build.rs"

[dependencies]
byteorder = "1.2"
chrono = "0.4"
derive-error = "0.0"
enum_primitive = "0.1"
env_logger = "0.5"
futures = "0.1"
lazy_static = "1.0"
log = "0.4"
num = "0.1"
rand = "0.5"
rustls = "0.12"
tokio-core = "0.1"
tokio-io = "0.1"
tokio-rustls = "0.6"
walkdir = "2.1"
webpki = "0.18.0-alpha3"

[build-dependencies]
